tests/should_fail/bug/subregion.coma
module M_list_reversal_h
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec list_reversal_h (l: UInt64.t) (return (x: UInt64.t)) = (! bb0
    [ bb0 = s0 [ s0 = [ &r <- (0: UInt64.t) ] s1 | s1 = bb1 ]
    | bb1 = bb1
      [ bb1 = {[@expl:loop invariant] true}
        (! s0)
        [ s0 = [ &_8 <- l <> (0: UInt64.t) ] s1 | s1 = any [ br0 -> {_8 = false} (! bb4) | br1 -> {_8} (! bb3) ] ]
        [ bb3 = s0 [ s0 = {[@expl:assertion] false} s1 | s1 = [ &tmp <- l ] s2 | s2 = [ &r <- tmp ] s3 | s3 = bb1 ] ] ]
    | bb4 = s0 [ s0 = [ &_ret <- r ] s1 | s1 = return {_ret} ] ]
    [ & _ret: UInt64.t = Any.any_l ()
    | & l: UInt64.t = l
    | & r: UInt64.t = Any.any_l ()
    | & _8: bool = Any.any_l ()
    | & tmp: UInt64.t = Any.any_l () ]) [ return (result: UInt64.t) -> (! return {result}) ]
end
